--- a/settings/BuildSettings.json
+++ b/settings/BuildSettings.json
@@ -1,3 +1,7 @@
 {
-  "name": "ludo"
+  "name": "ludo",
+  "startupScene": "res://db77908c-035c-4db2-8c4c-8d35a0103267",
+  "includedScenes": [
+    "res://9b931ecf-fde9-44dd-acf3-15f8dc807965"
+  ]
 }
