--- a/settings/BuildSettings.json
+++ b/settings/BuildSettings.json
@@ -1,10 +1,11 @@
 {
   "name": "ludo",
-  "startupScene": "res://db77908c-035c-4db2-8c4c-8d35a0103267",
+  "startupScene": "res://f88bf80d-9ed1-4b23-a2b5-973ca09f8141",
   "includedScenes": [
     "res://9b931ecf-fde9-44dd-acf3-15f8dc807965",
     "res://3b168812-ba9d-4e3b-ba40-11e16a2445bc",
-    "res://db77908c-035c-4db2-8c4c-8d35a0103267"
+    "res://db77908c-035c-4db2-8c4c-8d35a0103267",
+    "res://f88bf80d-9ed1-4b23-a2b5-973ca09f8141"
   ],
   "alwaysIncluded": [
     "res://f8",
