--- a/settings/BuildSettings.json
+++ b/settings/BuildSettings.json
@@ -5,7 +5,8 @@
     "res://9b931ecf-fde9-44dd-acf3-15f8dc807965",
     "res://3b168812-ba9d-4e3b-ba40-11e16a2445bc",
     "res://db77908c-035c-4db2-8c4c-8d35a0103267",
-    "res://f88bf80d-9ed1-4b23-a2b5-973ca09f8141"
+    "res://f88bf80d-9ed1-4b23-a2b5-973ca09f8141",
+    "res://d1a07803-b473-4777-b72e-4e6b01690aed"
   ],
   "alwaysIncluded": [
     "res://f8",
