--- a/native/android/app/src/main/AndroidManifest.xml
+++ b/native/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.touchmagic.ludo">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="Ludo King"
+        android:label="Ludo Fans"
        android:name="${applicationName}"
        android:usesCleartextTraffic="true"
+
        android:icon="@mipmap/logo">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
