--- a/settings/BuildSettings.json
+++ b/settings/BuildSettings.json
@@ -1,5 +1,6 @@
 {
   "name": "ludo",
+  "minifyJS": true,
   "startupScene": "res://f88bf80d-9ed1-4b23-a2b5-973ca09f8141",
   "includedScenes": [
     "res://9b931ecf-fde9-44dd-acf3-15f8dc807965",
@@ -9,10 +10,11 @@
     "res://d1a07803-b473-4777-b72e-4e6b01690aed"
   ],
   "alwaysIncluded": [
-    "res://f8",
-    "res://f7",
-    "res://f4",
-    "res://f6"
+    "res://:f4",
+    "res://:f5",
+    "res://:f6",
+    "res://:f7",
+    "res://:f8"
   ],
   "excludeFilesRule": [],
   "android": {
