--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "library/": true,
         "temp/": true,
         "local/": true
-    }
+    },
+    "C_Cpp.intelliSenseEngineFallback": "enabled"
 }
