Ludo，地面不平整、不对齐，怀疑是美术数据的问题。

--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -60,6 +60,14 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    signingConfigs {
+        release {
+            storeFile file('D:/game/user.keystore')
+            storePassword '19830915'
+            keyAlias 'touchmagic'
+            keyPassword '19830915'
+        }
+    }
 }
 
 flutter {
