1108 Ludo,设置里的音乐音效按键可以被识别成按钮,但是游戏全程没有音乐和点击音效。

--- a/settings/BuildSettings.json
+++ b/settings/BuildSettings.json
@@ -15,7 +15,8 @@
     "res://:f6",
     "res://:f7",
     "res://:f8",
-    "res://:f7"
+    "res://:f7",
+    "res://:f9"
   ],
   "excludeFilesRule": [],
   "android": {
