--- a/enwrap/android/app/src/main/AndroidManifest.xml
+++ b/enwrap/android/app/src/main/AndroidManifest.xml
@@ -6,12 +6,14 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.android.vending.BILLING" />
+
     <application
         android:label="ludo"
         android:usesCleartextTraffic="true"
 
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         tools:targetApi="m">
         <activity
             android:name="cn.touchmagic.ludo.MainActivity"
