--- a/enwrap/android/app/src/main/AndroidManifest.xml
+++ b/enwrap/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:icon="@mipmap/logo"
         tools:targetApi="m">
         <activity
-            android:name="cn.touchmagic.ludo.MainActivity"
+            android:name="com.touchmagic.ludo.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
