--- a/enwrap/android/app/build.gradle
+++ b/enwrap/android/app/build.gradle
@@ -65,6 +65,11 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    lintOptions {
+
+        checkReleaseBuilds false
+
+    }
 }
 
 flutter {
