--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ bin/js/bundle.js.map
 
 bin/js/bundles
 native/.dart_tool
+native/build
+native/android/.gradle
+native/android/.idea
+native/.idea
