--- a/enwrap/android/app/src/main/AndroidManifest.xml
+++ b/enwrap/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:name="${applicationName}"
         android:icon="@mipmap/logo"
         tools:targetApi="m">
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-6424827618816093~8385011964"/>
+
+
         <activity
             android:name="cn.touchmagic.ludo.MainActivity"
             android:exported="true"
