--- a/enwrap/android/build.gradle
+++ b/enwrap/android/build.gradle
@@ -1,21 +1,36 @@
 buildscript {
     ext.kotlin_version = '1.7.10'
     repositories {
-
+        jcenter()
         google()
+
         mavenCentral()
+        maven{ url "https://maven.aliyun.com/repository/google" }
+
+        maven{ url "https://maven.aliyun.com/repository/jcenter" }
+
+        maven{ url "https://maven.aliyun.com/nexus/content/groups/public" }
+        maven {url 'https://dl.bintray.com/jetbrains/anko'}
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:4.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
+        jcenter()
         google()
+
         mavenCentral()
+        maven{ url "https://maven.aliyun.com/repository/google" }
+
+        maven{ url "https://maven.aliyun.com/repository/jcenter" }
+
+        maven{ url "https://maven.aliyun.com/nexus/content/groups/public" }
+        maven {url 'https://dl.bintray.com/jetbrains/anko'}
     }
 }
 
